--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.21.1",
     "bcryptjs": "^2.4.3",
     "express": "^4.21.1",
+    "haversine-distance": "^1.2.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.15",
