--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@prisma/client": "^5.21.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "expo-server-sdk": "^3.13.0",
     "express": "^4.21.1",
     "haversine-distance": "^1.2.3",
     "jsonwebtoken": "^9.0.2",
@@ -22,6 +24,7 @@
     "prisma": "^5.21.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.0.5",
     "ws": "^8.18.0"
   },
   "devDependencies": {
